--- a/com.lwink.javashell/.settings/org.eclipse.buildship.core.prefs
+++ b/com.lwink.javashell/.settings/org.eclipse.buildship.core.prefs
@@ -1,6 +1,7 @@
 build.commands=org.eclipse.jdt.core.javabuilder
 connection.arguments=
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+connection.gradle.user.home=null
 connection.java.home=null
 connection.jvm.arguments=
 connection.project.dir=..
@@ -8,4 +9,4 @@ containers=org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debu
 derived.resources=.gradle,build
 eclipse.preferences.version=1
 natures=org.eclipse.jdt.core.javanature
-project.path=\:
+project.path=\:com.lwink.javashell
