--- a/com.lwink.javashell/.settings/org.eclipse.buildship.core.prefs
+++ b/com.lwink.javashell/.settings/org.eclipse.buildship.core.prefs
@@ -1,12 +1,13 @@
-build.commands=org.eclipse.jdt.core.javabuilder
+#Wed Sep 13 16:08:31 PDT 2017
 connection.arguments=
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
-connection.gradle.user.home=null
-connection.java.home=null
-connection.jvm.arguments=
-connection.project.dir=..
 containers=org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/
-derived.resources=.gradle,build
-eclipse.preferences.version=1
+connection.jvm.arguments=
+build.commands=org.eclipse.jdt.core.javabuilder
+connection.project.dir=..
 natures=org.eclipse.jdt.core.javanature
+connection.gradle.user.home=null
+eclipse.preferences.version=1
+connection.java.home=null
+derived.resources=.gradle,build
 project.path=\:com.lwink.javashell
+connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
